# m-aider

./: .env.example  .env.secrets.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.MD  LICENSE  README.md  RUNTIME-API-ENUMERATION.md  install-python-maider.sh  pyproject.toml  pytest.ini  requirements.txt
.github/: settings.yml
.github/workflows/: claude-code-review.yml  claude.yml  lint-and-test.yml  repo-settings.yml
click/: __init__.py  testing.py
docs/: ADDING-PROVIDERS.md  AGENTS.md  ARCHITECTURE.md  BENCHMARKING-GUIDE.md  CLOUD-INIT-DESIGN.md  MIGRATION-COMPLETE.md  MIGRATION-STATUS.md  MULTI-GPU-VALIDATION.md  NEW-FEATURES.md  PYTHON-MIGRATION.md  PYTHON-TEST-REPORT.md  VALIDATION-COMMANDS.md  VALIDATION-GUIDE.md
linode_api4/: __init__.py
presets/: README.md  rtx4000-1gpu.env  rtx4000-2gpu.env  rtx6000-1gpu.env  rtx6000-2gpu.env  rtx6000-4gpu.env  use-preset.sh
rich/: __init__.py  console.py  panel.py  progress.py  prompt.py  table.py
src/maider/: __init__.py  benchmark_db.py  benchmark_models.py  cli.py  compose.py  config.py  gpu_utils.py  healing.py  linode_client.py  model_validation.py  output.py  recommendations.py  session.py  ssh_utils.py  watchdog.py
src/maider/commands/: __init__.py  benchmark.py  benchmark_collect.py  benchmark_compare.py  benchmark_status.py  check.py  cleanup.py  down.py  extend.py  list_types.py  list_vms.py  recommend.py  status.py  switch_model.py  tunnel.py  up.py  use.py  validate.py  validate_perf.py  watch.py  wizard.py
tests/: __init__.py  conftest.py  test_benchmark_db.py  test_benchmark_models.py  test_check.py  test_config.py  test_linode_client.py  test_model_validation.py  test_output.py  test_providers_base.py  test_providers_linode.py  test_recommendations.py  test_session.py  test_switch_model.py  test_tunnel.py  test_validate.py  test_wizard.py
(+3 files in other folders)
